[workspace]
#resolver = "2"
members = [
    "server",
    "libs/base",
]

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
#debug = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1


[workspace.dependencies]
async-channel = "1.8.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
futures = { version = "0.3.26", features = ["thread-pool"] }
futures-util = "0.3.26"
#futures-util = { version = "0.3.26", default-features = false, features = ["std"] }
bytes = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }