[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std.workspace = true
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.18.0"
