[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { version = "*", path = "../libs/base" }
bytes.workspace = true
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
